--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.password=MyBigCat1606
+spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/springsec
+spring.main.allow-circular-references = true
