--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=MyBigCat1606
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/springsec
 spring.main.allow-circular-references = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
